--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2593,6 +2593,8 @@ map ctrl+shift+n noop
 
 #: }}}
 background #2a2a2a
+background_opacity 0.25
+include everforest.conf
 
 clipboard:
   enable: true
